--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -203,7 +203,7 @@
                 >
               </div>
 
-              <input class="btn-submit" type="submit" value="C'est parti" />
+              <input class="btn-submit modal-btn" type="submit" value="C'est parti" />
             </form>
           </div>
           <div class="modal-body-submit">
