--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="modal.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
 
     <!-- App icon -->
-    <link href="./favicon.png" rel="icon" type="image/png" />
+    <link href="./assets/images/favicon.png" rel="icon" type="image/png" />
 
     <!-- Font Awesome -->
     <link
@@ -29,7 +29,7 @@
     <!-- ======================= -->
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-        <img alt="logo" src="Logo.png" width="auto" height="auto" />
+        <img alt="logo" src="./assets/images/Logo.png" width="auto" height="auto" />
       </div>
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
@@ -60,7 +60,7 @@
           <button class="btn-signup modal-btn">je m'inscris</button>
         </div>
         <div class="hero-img">
-          <img src="./bg_img.jpg" alt="img" />
+          <img src="./assets/images/bg_img.jpg" alt="img" />
         </div>
         <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
@@ -271,6 +271,6 @@
     <!-- ======================= -->
     <!-- Scripts -->
     <!-- ======================= -->
-    <script src="modal.js"></script>
+    <script src="./assets/js/modal.js"></script>
   </body>
 </html>
